
[package]
name = "feature_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
log4rs = "1.1.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
lazy_static = "1.4.0"
rand="0.8.5"
bincode="1.3.3"
string-builder = "0.2.0"
num_enum="0.5.7"
bytes="1.1.0"
