[package]
name = "feature_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feature_base={path="../feature_base"}
log = "0.4.6"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
rand="0.8.5"
chrono="0.4.19"